--- a/react/jc2002-individual-project/package.json
+++ b/react/jc2002-individual-project/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.8",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
@@ -17,6 +18,7 @@
     "react-dom": "18.1.0",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
