--- a/react/jc2002-individual-project/package.json
+++ b/react/jc2002-individual-project/package.json
@@ -10,15 +10,20 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^1.8.8",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "framer-motion": "^6.3.3",
     "js-cookie": "^3.0.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.3.1",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "router": "^1.3.7",
     "yup": "^0.32.11"
   },
   "devDependencies": {
